@@ -6,6 +6,8 @@ New features:
 - External method to replay meta_profiles
 - adding the possibility to upload a zip archive of images directly in a
   gallery
+- meta factory sets initial versions of upgrade categories
+  at site creation time
 Bug fixes:
 ~~~~~~~~~~
 - the title and post url in metafactory used to be non configurable
